--- a/riffshareiii/theme/plugin.css
+++ b/riffshareiii/theme/plugin.css
@@ -1,12 +1,13 @@
 #pluginDiv {
 	position: absolute;
-	z-index: 999;
-	left: 0.5cm;
-	right: 0.5cm;
-	top: 0.5cm;
-	bottom: 0.5cm;
+	z-index: 1999;
+	left: 0.0cm;
+	right: 0.0cm;
+	top: 0.0cm;
+	bottom: 0.0cm;
 	border-style: solid;
-	border-width: 0.125cm;
+	border-width: 0.0cm;
+	border-width2: 0.125cm;
 	border-color: var(--shadow-color);
 	display: flex;
 	flex-direction: column;
