--- a/riffshareiii/theme/colordarkgreen.css
+++ b/riffshareiii/theme/colordarkgreen.css
@@ -2,7 +2,7 @@
 	--background-color: #030900;
 	--main-color: #fff;
 	--drag-color: #066;
-	--line-color: #cff;
+	--line-color: #cfe;
 	--click-color: #360;
 
 }
