--- a/riffshareiii/theme/fanpane.css
+++ b/riffshareiii/theme/fanpane.css
@@ -185,10 +185,11 @@
 }
 
 .fanSpeakerIconLabel {
-	font-size: calc(8*var(--tapSize));
+	font-size: calc(24*var(--tapSize));
 	pointer-events: none;
-	fill: var(--main-color);
+	fill: var(--line-color);
 	font-family: 'Material-Design-Iconic-Font';
+	text-align2: center;
 }
 
 .controlConnection {
