--- a/riffshareiii/theme/base.css
+++ b/riffshareiii/theme/base.css
@@ -35,12 +35,20 @@
 }
 */
 
-
+/*
 @font-face {
 	font-family: 'MontserratAlternates-Regular';
 	src: url(MontserratAlternates/MontserratAlternates-Regular.ttf);
+}*/
+/*
+@font-face {
+	font-family: 'Brahms';
+	src: url('ofont.ru_Brahms Gotisch.ttf');
+}*/
+@font-face {
+	font-family: 'MontserratAlternates';
+	src: url('MontserratAlternates/MontserratAlternates-Regular.ttf');
 }
-
 
 
 ::-webkit-scrollbar2 {
@@ -48,7 +56,8 @@
 }
 
 :root {
-	--font-ratio: 1;
+	--font-ratio2: 1;
+	--font-ratio: 1.0;
 }
 
 :root {
