--- a/riffshareiii/parts/exe/theme/plugin.css
+++ b/riffshareiii/parts/exe/theme/plugin.css
@@ -12,7 +12,7 @@
 	display: flex;
 	flex-direction: column;
 	visibility: hidden;
-	border-radius: 0.25cm;
+	border-radius2: 0.25cm;
 }
 
 #pluginFrame {
@@ -25,7 +25,7 @@
 	flex-basis: 0;
 	flex-shrink: 1;
 	flex-grow: 1;
-	border-radius: 0.0cm 0.0cm 0.125cm 0.125cm;
+	border-radius2: 0.0cm 0.0cm 0.125cm 0.125cm;
 	overflow: scroll;
 	scrollbar-color: red orange;
 	scrollbar-width: thin;
@@ -35,7 +35,7 @@
 	width: 100%;
 	height: 1.0cm;
 	background-color: var(--background-color);
-	border-radius: 0.125cm 0.125cm 0.0cm 0.0cm;
+	border-radius2: 0.125cm 0.125cm 0.0cm 0.0cm;
 	flex-basis: auto;
 	flex-shrink: 0;
 	flex-grow: 0;
@@ -86,7 +86,7 @@
 }
 
 #pluginRefresh {
-	border-radius: 0.4cm;
+	border-radius2: 0.4cm;
 	background-color: var(--click-color);
 	color: var(--main-color);
 	text-shadow2: 0.25px 0px var(--main-color), -0.25px 0px var(--main-color), 0px 0.25px var(--main-color), 0px -0.25px var(--main-color);
@@ -104,4 +104,49 @@
 	justify-content: center;
 	min-width: 0.8cm;
 
+}
+
+
+
+#pluginBottom {
+	width: 100%;
+	height: 1.0cm;
+	background-color: var(--background-color);
+	border-radius2: 0.125cm 0.125cm 0.0cm 0.0cm;
+	flex-basis: auto;
+	flex-shrink: 0;
+	flex-grow: 0;
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	padding-top: 0.1cm;
+}
+#pluginDeleteLabel {
+	color: var(--main-color);
+	font-size: var(--label-04cm);
+	padding-left: 0.5cm;
+	padding-top: 0.15cm;
+	flex-grow: 1;
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	text-align: right;
+}
+#pluginDeleteButton {
+	border-radius: 0.4cm;
+	background-color: var(--click-color);
+	color: var(--main-color);
+	box-shadow: inset 0px 0px 0px 0.5px var(--main-color);
+	font-size: var(--label-05cm);
+	width: 0.8cm;
+	height: 0.8cm;
+	text-align: center;
+	font-family: "Material-Design-Iconic-Font";
+	cursor: pointer;
+	margin-left: 0.2cm;
+	margin-right: 0.2cm;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	min-width: 0.8cm;
 }
