--- a/riffshareiii/parts/exe/theme/base.css
+++ b/riffshareiii/parts/exe/theme/base.css
@@ -102,8 +102,12 @@
 	--click-color: #360;
 
 	--click-color50: color-mix(in lab, transparent 50%, var(--click-color));
-	--line-color50: color-mix(in lab, transparent 50%, var(--line-color));
+
 	--line-color75: color-mix(in lab, transparent 75%, var(--line-color));
+	--line-color50: color-mix(in lab, transparent 50%, var(--line-color));
+	--line-color6: color-mix(in lab, transparent 6%, var(--line-color));
+
+	--background-color25: color-mix(in lab, transparent 25%, var(--background-color));
 
 }
 
