--- a/riffshareiii/parts/exe/theme/mixer.css
+++ b/riffshareiii/parts/exe/theme/mixer.css
@@ -31,7 +31,7 @@
 }
 
 .interactiveTimeMeasureMark{
-    fill: var(--click-color);
+    fill: var(--main-color);
 	fill-opacity: 50%;
 }
 
@@ -180,7 +180,7 @@
 	pointer-events: none;
 }
 .interActiveGridLine{
-	fill: var(--click-color);
+	fill: var(--main-color);
 	fill-opacity:50%;
     stroke: none;
 }
