--- a/riffshareiii/parts/exe/theme/colorneon.css
+++ b/riffshareiii/parts/exe/theme/colorneon.css
@@ -1,9 +1,9 @@
 :root {
 	--background-color: #101;
-	--main-color: #cff;
-	--drag-color: #093;
+	--main-color: #9cf;
+	--drag-color: #03f;
 	--line-color: #ffc;
-	--click-color: #39f;
+	--click-color: #c39;
 }
 
 
