--- a/riffshareiii/parts/exe/theme/colordarkred.css
+++ b/riffshareiii/parts/exe/theme/colordarkred.css
@@ -1,7 +1,7 @@
 :root {
 	--background-color: #eef6ff;
 	--main-color: #000;
-	--drag-color: #fc0;
+	--drag-color: #f60;
 	--line-color: #666;
 	--click-color: #f00;
 }
