--- a/riffshareiii/parts/exe/theme/timeselect.css
+++ b/riffshareiii/parts/exe/theme/timeselect.css
@@ -39,9 +39,65 @@
 
 }
 
-.timeMarkButtonCircle {
+.timeMarkButtonCircle025 {
 	fill: var(--click-color);
 	cursor: pointer;
+	stroke: var(--main-color);
+    stroke-width: 0.005cm;
+}
+.timeMarkButtonCircle05 {
+	fill: var(--click-color);
+	cursor: pointer;
+	stroke: var(--main-color);
+    stroke-width: 0.01cm;
+}
+.timeMarkButtonCircle1 {
+	fill: var(--click-color);
+	cursor: pointer;
+	stroke: var(--main-color);
+    stroke-width: 0.02cm;
+}
+.timeMarkButtonCircle2 {
+	fill: var(--click-color);
+	cursor: pointer;
+	stroke: var(--main-color);
+    stroke-width: 0.04cm;
+}
+.timeMarkButtonCircle4 {
+	fill: var(--click-color);
+	cursor: pointer;
+	stroke: var(--main-color);
+    stroke-width: 0.08cm;
+}
+.timeMarkButtonCircle8 {
+	fill: var(--click-color);
+	cursor: pointer;
+	stroke: var(--main-color);
+    stroke-width: 0.16cm;
+}
+.timeMarkButtonCircle16 {
+	fill: var(--click-color);
+	cursor: pointer;
+	stroke: var(--main-color);
+    stroke-width: 0.32cm;
+}
+.timeMarkButtonCircle32 {
+	fill: var(--click-color);
+	cursor: pointer;
+	stroke: var(--main-color);
+    stroke-width: 0.64cm;
+}
+.timeMarkButtonCircle64 {
+	fill: var(--click-color);
+	cursor: pointer;
+	stroke: var(--main-color);
+    stroke-width: 1.28cm;
+}
+.timeMarkButtonCircle128 {
+	fill: var(--click-color);
+	cursor: pointer;
+	stroke: var(--main-color);
+    stroke-width: 2.56cm;
 }
 
 .timeMarkButtonBorder {
@@ -52,7 +108,7 @@
 .timeBarNum025 {
 	fill: var(--line-color);
 	fill-opacity: 90%;
-	font-size: calc(0.25*var(--tapSize));
+	font-size: calc(0.2*var(--tapSize));
 	text-anchor22: start;
 	pointer-events: none;
 }
@@ -60,63 +116,63 @@
 .timeBarNum05 {
 	fill: var(--line-color);
 	fill-opacity: 90%;
-	font-size: calc(0.5*var(--tapSize));
+	font-size: calc(0.4*var(--tapSize));
 	pointer-events: none;
 }
 
 .timeBarNum1 {
 	fill: var(--line-color);
 	fill-opacity: 90%;
-	font-size: calc(1*var(--tapSize));
+	font-size: calc(0.8*var(--tapSize));
 	pointer-events: none;
 }
 
 .timeBarNum2 {
 	fill: var(--line-color);
 	fill-opacity: 90%;
-	font-size: calc(2*var(--tapSize));
+	font-size: calc(1.6*var(--tapSize));
 	pointer-events: none;
 }
 
 .timeBarNum4 {
 	fill: var(--line-color);
 	fill-opacity: 90%;
-	font-size: calc(4*var(--tapSize));
+	font-size: calc(3.2*var(--tapSize));
 	pointer-events: none;
 }
 
 .timeBarNum8 {
 	fill: var(--line-color);
 	fill-opacity: 90%;
-	font-size: calc(8*var(--tapSize));
+	font-size: calc(6.4*var(--tapSize));
 	pointer-events: none;
 }
 
 .timeBarNum16 {
 	fill: var(--line-color);
 	fill-opacity: 90%;
-	font-size: calc(16*var(--tapSize));
+	font-size: calc(12.8*var(--tapSize));
 	pointer-events: none;
 }
 
 .timeBarNum32 {
 	fill: var(--line-color);
 	fill-opacity: 90%;
-	font-size: calc(32*var(--tapSize));
+	font-size: calc(25.6*var(--tapSize));
 	pointer-events: none;
 }
 
 .timeBarNum64 {
 	fill: var(--line-color);
 	fill-opacity: 90%;
-	font-size: calc(64*var(--tapSize));
+	font-size: calc(51.2*var(--tapSize));
 	pointer-events: none;
 }
 
 .timeBarNum128 {
 	fill: var(--line-color);
 	fill-opacity: 90%;
-	font-size: calc(128*var(--tapSize));
+	font-size: calc(102.4*var(--tapSize));
 	pointer-events: none;
 }
 
@@ -130,69 +186,69 @@
 .timeBarInfo025 {
 	fill: var(--line-color);
 	fill-opacity: 90%;
-	font-size: calc(0.5*0.25*var(--tapSize));
+	font-size: calc(0.1*var(--tapSize));
 	text-anchor2: end;
 }
 
 .timeBarInfo05 {
 	fill: var(--line-color);
 	fill-opacity: 90%;
-	font-size: calc(0.5*0.5*var(--tapSize));
+	font-size: calc(0.2*var(--tapSize));
 	text-anchor2: end;
 }
 
 .timeBarInfo1 {
 	fill: var(--line-color);
 	fill-opacity: 90%;
-	font-size: calc(0.5*1*var(--tapSize));
+	font-size: calc(0.4*var(--tapSize));
 	text-anchor2: end;
 }
 
 .timeBarInfo2 {
 	fill: var(--line-color);
 	fill-opacity: 90%;
-	font-size: calc(0.5*2*var(--tapSize));
+	font-size: calc(0.8*var(--tapSize));
 	text-anchor2: end;
 }
 
 .timeBarInfo4 {
 	fill: var(--line-color);
 	fill-opacity: 90%;
-	font-size: calc(0.5*4*var(--tapSize));
+	font-size: calc(1.6*var(--tapSize));
 	text-anchor2: end;
 }
 
 .timeBarInfo8 {
 	fill: var(--line-color);
 	fill-opacity: 90%;
-	font-size: calc(0.5*8*var(--tapSize));
+	font-size: calc(3.2*var(--tapSize));
 	text-anchor2: end;
 }
 
 .timeBarInfo16 {
 	fill: var(--line-color);
 	fill-opacity: 90%;
-	font-size: calc(0.5*16*var(--tapSize));
+	font-size: calc(6.4*var(--tapSize));
 	text-anchor2: end;
 }
 
 .timeBarInfo32 {
 	fill: var(--line-color);
 	fill-opacity: 90%;
-	font-size: calc(0.5*32*var(--tapSize));
+	font-size: calc(12.8*var(--tapSize));
 	text-anchor2: end;
 }
 
 .timeBarInfo64 {
 	fill: var(--line-color);
 	fill-opacity: 90%;
-	font-size: calc(0.5*64*var(--tapSize));
+	font-size: calc(25.6*var(--tapSize));
 	text-anchor2: end;
 }
 
 .timeBarInfo128 {
 	fill: var(--line-color);
 	fill-opacity: 90%;
-	font-size: calc(0.5*128*var(--tapSize));
+	font-size: calc(51.2*var(--tapSize));
 	text-anchor2: end;
 }
