--- a/riffshareiii/parts/exe/theme/leftbar.css
+++ b/riffshareiii/parts/exe/theme/leftbar.css
@@ -190,51 +190,63 @@
 
 .samplerRowLabel025 {
     fill: var(--line-color);
-	fill-opacity: 50%;
+	fill-opacity: 75%;
     font-size: calc(0.25*var(--tapSize));
 	pointer-events: none;
 }
 .samplerRowLabel05 {
     fill: var(--line-color);
-	fill-opacity: 50%;
+	fill-opacity: 75%;
     font-size: calc(0.5*var(--tapSize));
 	pointer-events: none;
 }
 .samplerRowLabel1 {
     fill: var(--line-color);
-	fill-opacity: 50%;
+	fill-opacity: 75%;
     font-size: calc(0.75*var(--tapSize));
 	pointer-events: none;
 }
 .samplerRowLabel2 {
     fill: var(--line-color);
-	fill-opacity: 50%;
+	fill-opacity: 75%;
     font-size: calc(1*var(--tapSize));
+	pointer-events: none;
+}
+.samplerRowLabel4 {
+    fill: var(--line-color);
+	fill-opacity: 75%;
+    font-size: calc(1.5*var(--tapSize));
 	pointer-events: none;
 }
 
 .autoRowLabel025 {
     fill: var(--line-color);
-	fill-opacity: 50%;
+	fill-opacity: 75%;
     font-size: calc(2*0.125*var(--tapSize));
 	pointer-events: none;
 }
 .autoRowLabel05 {
     fill: var(--line-color);
-	fill-opacity: 50%;
+	fill-opacity: 75%;
     font-size: calc(4*0.125*var(--tapSize));
 	pointer-events: none;
 }
 .autoRowLabel1 {
     fill: var(--line-color);
-	fill-opacity: 50%;
+	fill-opacity: 75%;
     font-size: calc(6*0.125*var(--tapSize));
 	pointer-events: none;
 }
 .autoRowLabel2 {
     fill: var(--line-color);
-	fill-opacity: 50%;
+	fill-opacity: 75%;
     font-size: calc(8*0.125*var(--tapSize));
+	pointer-events: none;
+}
+.autoRowLabel4 {
+    fill: var(--line-color);
+	fill-opacity: 75%;
+    font-size: calc(12*0.125*var(--tapSize));
 	pointer-events: none;
 }
 
