--- a/riffshareiii/parts/exe/theme/plugin.css
+++ b/riffshareiii/parts/exe/theme/plugin.css
@@ -8,12 +8,12 @@
 	border-style: solid;
 	border-width: 0.0cm;
 	border-width2: 0.125cm;
-	border-color: var(--shadow-color);
+	border-color2: var(--shadow-color);
 	display: flex;
 	flex-direction: column;
 	visibility: hidden;
 	border-radius2: 0.25cm;
-	background-color: var(--line-color50);
+	background-color: #888888ee;
 }
 
 #pluginFrame {
@@ -72,6 +72,7 @@
 	white-space: nowrap;
 	overflow: hidden;
 	text-overflow: ellipsis;
+	text-align: center;
 }
 
 #pluginCancel {
@@ -136,7 +137,7 @@
 	flex-grow: 0;
 	display: flex;
 	flex-direction: row;
-	justify-content: space-between;
+	justify-content: center;
 	padding-top: 0.1cm;
 }
 #pluginDeleteLabel {
@@ -150,9 +151,10 @@
 	text-overflow: ellipsis;
 	text-align: right;
 }
-#pluginDeleteButton {
+.pluginDoButton {
 	border-radius: 0.4cm;
-	background-color: var(--click-color);
+	background-color2: var(--click-color);
+	background-color: var(--background-color);
 	color: var(--main-color);
 	box-shadow: inset 0px 0px 0px 0.5px var(--main-color);
 	font-size: var(--label-05cm);
@@ -161,8 +163,8 @@
 	text-align: center;
 	font-family: "Material-Design-Iconic-Font";
 	cursor: pointer;
-	margin-left: 0.2cm;
-	margin-right: 0.2cm;
+	margin-left: 0.07cm;
+	margin-right: 0.07cm;
 	display: flex;
 	align-items: center;
 	justify-content: center;
