--- a/riffshareiii/parts/exe/theme/base.css
+++ b/riffshareiii/parts/exe/theme/base.css
@@ -66,6 +66,8 @@
 
 :root {
 	--label-4cm: calc(4.0*var(--font-ratio)*var(--tapSize));
+	--label-3cm: calc(3.0*var(--font-ratio)*var(--tapSize));
+	--label-2cm: calc(2.0*var(--font-ratio)*var(--tapSize));
 	--label-1cm: calc(1.0*var(--font-ratio)*var(--tapSize));
 	--label-075cm: calc(0.75*var(--font-ratio)*var(--tapSize));
 	--label-05cm: calc(0.5*var(--font-ratio)*var(--tapSize));
