--- a/riffshareiii/parts/exe/theme/fanpane.css
+++ b/riffshareiii/parts/exe/theme/fanpane.css
@@ -1,10 +1,29 @@
 .fanIconLabel {
-	fill: var(--main-color);
-	font-size: var(--label-025cm);
+	fill: var(--line-color);
+	font-size: var(--label-2cm);
 	pointer-events: none;
 	dominant-baseline22: middle;
-	text-anchor: middle;
+	text-anchor2: middle;
 }
+.fanIconLabelSize0 {
+	font-size: var(--label-025cm);
+}
+.fanIconLabelSize1 {
+	font-size: var(--label-04cm);
+}
+.fanIconLabelSize2 {
+	font-size: var(--label-075cm);
+}
+.fanIconLabelSize3 {
+	font-size: var(--label-1cm);
+}
+.fanIconLabelSize4{
+	font-size: var(--label-2cm);
+}
+.fanIconLabelSize5 {
+	font-size: var(--label-3cm);
+}
+
 
 .fanSamplerMoveIcon {
 	fill: var(--drag-color);
