--- a/riffshareiii/parts/exe/theme/colordarkred.css
+++ b/riffshareiii/parts/exe/theme/colordarkred.css
@@ -5,13 +5,11 @@
 	--line-color: #fff;
 	--click-color: #c01;
 }
-/*
+
 #pagediv {
-
-	background-image: url("bg/gjel.png");
-	background-repeat: repeat-x;
-	background-size2: cover;
-	background-position: bottom;
-
+	background-image: url("bg/plant.png");
+	background-size: cover;
+	background-position-x: center;
+	background-position-y: bottom;
 }
-*/
+
