--- a/riffshareiii/parts/exe/theme/colorlight.css
+++ b/riffshareiii/parts/exe/theme/colorlight.css
@@ -1,7 +1,7 @@
 :root {
 	--background-color: #eef6ff;
 	--main-color: #000;
-	--drag-color: #f6f;
+	--drag-color: #ccf;
 	--line-color: #339;
 	--click-color: #6cf;
 }
