--- a/riffshareiii/parts/exe/theme/colorlight.css
+++ b/riffshareiii/parts/exe/theme/colorlight.css
@@ -15,6 +15,6 @@
 	background-position-x2: center;
 	background-position-y2: bottom;
 	background-color2: red;
-	background-size: 500px;
+	background-size: 25% auto;
 }
 
