--- a/riffshareiii/parts/exe/theme/plugin.css
+++ b/riffshareiii/parts/exe/theme/plugin.css
@@ -67,6 +67,24 @@
 	background-color: #888888ee;
 }
 
+#pluginPointDiv {
+	position: absolute;
+	z-index: 1999;
+	left: 0.0cm;
+	right: 0.0cm;
+	top: 0.0cm;
+	bottom: 0.0cm;
+	border-style: solid;
+	border-width: 0.0cm;
+	border-width2: 0.125cm;
+	border-color2: var(--shadow-color);
+	display: flex;
+	flex-direction: column;
+	visibility: hidden;
+	border-radius2: 0.25cm;
+	background-color: #888888ee;
+}
+
 .pluginFrame {
 	left: 0.0cm;
 	right: 0.0cm;
@@ -84,6 +102,19 @@
 }
 
 #pluginActionHeader {
+	width: 100%;
+	height: 1.0cm;
+	background-color: var(--background-color10);
+	border-radius2: 0.125cm 0.125cm 0.0cm 0.0cm;
+	flex-basis: auto;
+	flex-shrink: 0;
+	flex-grow: 0;
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	padding-top: 0.1cm;
+}
+#pluginPointHeader {
 	width: 100%;
 	height: 1.0cm;
 	background-color: var(--background-color10);
@@ -130,6 +161,18 @@
 }
 */
 #pluginActionTitle {
+	color: var(--line-color);
+	font-size: var(--label-04cm);
+	padding-left: 0.0cm;
+	padding-top: 0.25cm;
+	flex-grow: 1;
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	text-align: center;
+	cursor:default;
+}
+#pluginPointTitle {
 	color: var(--line-color);
 	font-size: var(--label-04cm);
 	padding-left: 0.0cm;
