--- a/riffshareiii/parts/exe/theme/mixer.css
+++ b/riffshareiii/parts/exe/theme/mixer.css
@@ -268,6 +268,7 @@
 	fill: var(--main-color);
 	fill-opacity:95%;
     stroke: none;
+	pointer-events: none;
 }
 .automationFocusedDot{
 	fill: var(--click-color);
