--- a/riffshareiii/parts/exe/theme/base.css
+++ b/riffshareiii/parts/exe/theme/base.css
@@ -81,6 +81,7 @@
 	--icon-075cm: calc(0.75*var(--tapSize));
 	--icon-05cm: calc(0.5*var(--tapSize));
 	--icon-04cm: calc(0.4*var(--tapSize));
+	--icon-033cm: calc(0.33*var(--tapSize));
 }
 
 :root {
