--- a/riffshareiii/parts/exe/theme/mixer.css
+++ b/riffshareiii/parts/exe/theme/mixer.css
@@ -13,16 +13,19 @@
     stroke-linejoin: round;
     stroke-width: calc(0.95*var(--tapSize));
 	stroke-opacity: 90%;
+    pointer-events: none;
 }
 .mixDropNote{
     fill: var(--click-color);
 	fill-opacity: 90%;
+    pointer-events: none;
 }
 .mixNoteSub{
     stroke: var(--line-color);
     stroke-linejoin: round;
     stroke-width: calc(0.95*var(--tapSize));
 	stroke-opacity: 33%;
+    pointer-events: none;
 }
 
 .mixTimeMeasureMark{
@@ -33,6 +36,7 @@
 .interactiveTimeMeasureMark{
     fill: var(--click-color);
 	fill-opacity: 95%;
+    pointer-events: none;
 }
 
 .mixFiller1{
@@ -183,6 +187,7 @@
 	fill: var(--click-color);
 	fill-opacity:95%;
     stroke: none;
+    pointer-events: none;
 }
 
 
