--- a/riffshareiii/parts/exe/theme/mixer.css
+++ b/riffshareiii/parts/exe/theme/mixer.css
@@ -145,6 +145,11 @@
 	stroke-opacity: 90%;
 	pointer-events: none;
 }
+.markPointNone {
+    fill: none;
+    stroke: none;
+	pointer-events: none;
+}
 
 .octaveBottomBorder{
 	fill: var(--line-color);
