--- a/riffshareiii/parts/extensions/minium.percussion/gui/plugins.css
+++ b/riffshareiii/parts/extensions/minium.percussion/gui/plugins.css
@@ -4,7 +4,6 @@ body {
 	font-style: normal;
 	background-color: #eef;
 	color: #006;
-	background2: #2A7B9B;
 	background: radial-gradient(circle, rgba(255, 255, 255, 1) 0%, rgba(190, 210, 255, 1) 100%);
 }
 
@@ -29,11 +28,13 @@ input[type="range"]::-webkit-slider-thumb {
 	-webkit-appearance: none;
 	width: 0.75cm;
 	height: 1cm;
-	background2: #000;
-	background: radial-gradient(circle, rgba(255, 255, 255, 1) 0%, rgba(190, 190, 255, 1) 100%);
+	background: radial-gradient(circle, rgba(255, 255, 255, 1) 0%, rgba(190, 210, 255, 1) 100%);
 	position: relative;
 	z-index: 3;
 	box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.75);
+	border-style: solid;
+	border-width: 1px;
+	border-color: #66c;
 }
 
 .cntrblk {
@@ -44,17 +45,7 @@ ul {
 	display: inline-block;
 	text-align: left;
 	list-style-type: "▢  ";
-	font-family222: sans-serif;
 	font-size: 0.75cm;
-	width2: 100%;
 }
-/*
-li {
-	text-overflow2: ellipsis;
-	text-overflow: clip;
-	display: -webkit-box;
-	-webkit-line-clamp: 2;
-	-webkit-box-orient: vertical;
-	overflow: hidden;
-	color: #056;
-}*/
+
+
